--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,5 +1,105 @@
-body {
-    background-color: rgb(102, 236, 169);
-    margin: 0;
-    padding: 0;
+html {
+    font-family: 'Roboto', sans-serif;
 }
+
+body {
+    background-color: rgb(118, 122, 120);
+}
+
+#title {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0px;
+}
+
+.form-box {
+    background-color: white;
+    width: 70%;
+    margin: auto;
+    height: auto;
+    border-radius: 5px;
+
+    #description {
+        width: 100%;
+        text-align: center;
+        padding: 20px 0px;
+
+    }
+
+    #survey-form {
+        display: block;
+        width: 100%;
+
+            .labels {
+                display: block;
+                text-align: center;
+                padding-bottom: 15px;
+
+                .leftTab {
+                    text-align: right;
+                    border-right: 5px solid white;
+                    
+                }
+
+                .rightTab {
+                    text-align: left;
+                    border-left: 5px solid white;
+                    
+                    input[type=number]{
+                        width: 10em;
+                    } 
+                    
+                    input[type=text]{
+                        width: 10em;
+                    }
+
+                    input[type=email]{
+                        width: 10em;
+                    }
+
+                    .textarea {
+                        width: 10em;
+                    }
+                }
+
+                .leftTab, .rightTab {
+                    display: inline-block;
+                    width: 45%;
+                    vertical-align: -webkit-baseline-middle;
+
+                    ul {
+                        list-style: none;
+                        padding: 0;
+                    }
+
+                    .textarea {
+                        height: 80px;
+                        resize: vertical;
+                    }
+                }
+            }
+
+
+    }
+    
+    .button {
+        text-align: center;
+        height: 40px;
+
+        #submit {
+            height: 30px;
+            border-radius: 5px;
+            background-color: gray;
+            color: white;
+            width: 10em;
+        
+}
+            #submit:hover {
+                color: red;
+            }
+        
+    }
+    
+
+}
+
